--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,159 +1,24 @@
-
-body {
-    margin: 0;
-    padding: 0;
+.logo{
+    max-height: 50px;
 }
-
-.logo {
-    max-width: 60px;
-    margin-right: 0px;
+.cards-row{
+    height: 90vh;
 }
-
-.container {
-    display: flex;
-    width: 100%;
-
+.scrollable{
+    overflow-y: auto;
+    height: 65vh;
 }
-
-.left-and-right{
-    display: flex;
-}
-
-.panel {
-    width: 47.5%;
-    height: 86.6vh;    
-    float: left;
-    box-shadow: 5px 6px 12px 4px rgba(0, 0, 0, 0.3); 
-    margin: 15px; 
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.panel.right {
-    float: right;
-}
-
-.non-scroll-content-left{
-    border-bottom: 1px solid #ccc;
-}
-.non-scroll-content-right{
-    border-bottom: 1px solid #ccc;
-    display: flex;
-}
-
-.panel-title {
-    padding: 10px 10px 0px 10px;
-    margin: 0;
-}
-
-.status-container {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: flex-end;
-    margin-right: 5px;
-}
-
-.text-logo-and-title
-{
-    display: block;
-    width: 98%;
-}
-
-.status-item {
-    display: flex;
-    align-items: start;
-    margin: 10px;
-}
-
-.content {
-    display: flex;
-}
-.status-and-spinner {
-    margin-left: 5px;
-    display: inline-block; 
-    vertical-align: middle;
-}
-
-.status-only {
-    margin: 5px;
-    display: inline-block; 
-    vertical-align: middle; 
-}
-
-.spinner-border {
-    vertical-align: middle; 
-}
-
-.common-height {
-    height: 20px;
-    display: flex;
-    align-items: center;
-}
-
-.scrollable-content {
-    flex: 1; 
-    overflow: auto; 
-    max-width: 100%;
-}
-
-.form-group {
-    margin-bottom: 0rem !important;
-}
-
-.logo-and-title{
-    display: flex;
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-th, td {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
-
-td {
-    white-space: normal;
-}
-
-th, td {
-    min-width: 100px;
+.thead-sticky {
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 @media screen and (max-width: 600px) {
-    h1{
-        margin-bottom: 0rem!important;
+    .cards-row{
+        height: 87.5vh;  
     }
-    .logo{
-        height: 40px;
-        width: 40px;
-    }
-    .container {
-        width: 98%;
-    }
-    .panel{
-        width: 92.5vw;
-        margin: 10px;
-    }
-    .panel-title {
-        padding: 5px;
-        margin: 0;
-    }
-    .panel.left {
-        height: 40.75vh;  
-    }
-    .panel.right {
-        height: 40.75vh;
-    }    
-    .left-and-right{
-        flex-direction: column;
-    }
-    .custom-spacing .form-group-modal {
-        margin-bottom: 5px; 
+    .card-body {
+        height: 40vh;  
     }
 }
