Fix Text Alignment

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -77,7 +77,7 @@
                           <input class="form-check-input" type="checkbox" id="select-all-checkbox">
                         </div>
                       </th>
-                      <th>Wanted Book</th>
+                      <th class="w-100 text-start">Wanted Book List</th>
                     </tr>
                   </thead>
                   <tbody>
