--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -153,13 +153,13 @@
             <label for="readarr-address">Readarr Address:</label>
             <input type="text" class="form-control" id="readarr-address" placeholder="Enter Readarr Address">
           </div>
-          <div class="form-group-modal my-3">
+          <div class="form-group-modal my-2">
             <label for="readarr-api-key">Readarr API Key:</label>
             <input type="text" class="form-control" id="readarr-api-key" placeholder="Enter Readarr API Key">
           </div>
           <div class="form-group-modal my-2">
-            <label for="libgen-address">Libgen Address:</label>
-            <input type="text" class="form-control" id="libgen-address" placeholder="Enter Library Genesis Address">
+            <label for="search-type">Search Type:</label>
+            <input type="text" class="form-control" id="search-type" placeholder="Enter fiction or non-fiction">
           </div>
           <div class="form-group-modal my-2">
             <label for="sleep-interval">Sleep Interval (Seconds):</label>
