--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -166,8 +166,9 @@
             <input type="number" class="form-control" id="sleep-interval" min="0" placeholder="Enter Sleep Interval">
           </div>
           <div class="form-group-modal my-2">
-            <label for="sync-schedule">Sync Schedule (comma-separated in 24-hour format):</label>
-            <input type="text" class="form-control" id="sync-schedule" placeholder="Enter Sync Schedule">
+            <label for="sync-schedule">Sync Schedule:</label>
+            <input type="text" class="form-control" id="sync_start_times"
+              placeholder="Enter Hour in 24hr format (use , for multiple hours)">
           </div>
           <div class="form-group-modal">
             <label for="minimum-match-ratio">Minimum Match Ratio (%):</label>
